--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <html>
 <head>
 	<style>
+		
+		.div{
+			padding:20px;
+		}
+		
+		.p{
+			padding:4px;
+		}
+		
 	</style>
 </head>
 <body>
 	
 	<div>sfd's websites</div>
 	
-	<div>🔧🗜️🪛 <a href="flashcards/testing.html">tool recognition flashcards</a></div>
-	<div>🪵🪚 <a href="readytowork/readytowork.html">los angeles union carpenters ready to work list</a></div>
+	<div>
+		<p>🔧🗜️🪛 <a href="flashcards/testing.html">tool recognition flashcards</a></p>
+		<p>🪵🪚 <a href="readytowork/readytowork.html">los angeles union carpenters ready to work list</a></p>
+	</div>
 	
-	<div>🧵 <a href="sample twine game.html">sample twine game</a></div>
-	<div>🐕 <a href="mickeygame/mickeyz.html">mickey game</a></div>
+	<div>
+		<p>🧵 <a href="sample twine game.html">sample twine game</a></p>
+		<p>🐕 <a href="mickeygame/mickeyz.html">mickey game</a></p>
+	</div>
 	
-	<div>🎶 <a href="jmix/index.html">jmix</a></div>
-	<div>🎵 <a href="españolmix/index.html">jmix</a></div>
+	<div>
+		<p>🎶 <a href="jmix/index.html">jmix</a></p>
+		<p>🎵 <a href="españolmix/index.html">españolmix</a></p>
+	</div>
 	
-	<div>⬅️⬆️ <a href="ddr/ddr.html">ddr selection screen</a></div>
+	<div><p>⬅️⬆️ <a href="ddr/ddr.html">ddr selection screen</a></p></div>
 	
-	<div>💪 <a href="exercise friend/friend.html">exercise friend</a></div>
+	<div><p>💪 <a href="exercise friend/friend.html">exercise friend</a></p></div>
 	
 </body>
 </html>
