mysterious ascii issue

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	<div>
 		<p>🎶 <a href="jmix/index.html">jmix</a></p>
-		<p>🎵 <a href="españolmix/index.html">españolmix</a></p>
+		<p>🎵 <a href="españolmix/index.html">españolmix</a></p>
 	</div>
 	
 	<div><p>⬅️⬆️ <a href="ddr/ddr.html">ddr selection screen</a></p></div>
