housegiving, also updated index

--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <head>
 	<style>
 		
-		.div{
-			padding:20px;
+		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+
+		body {
+			font-family: "Noto Serif";
+			color: #d3c8c3;
+			background-color: #212121;
+			font-size: 16px;
+			margin:50px;
 		}
 		
-		.p{
-			padding:4px;
+		div{
+			padding:5px;
+		}
+		
+		a{
+			color: #8e7fa8;
+		}
+		
+		a:visited{
+			color: #6e7384;
 		}
 		
 	</style>
@@ -17,23 +31,29 @@
 	<div>sfd's websites</div>
 	
 	<div>
-		<p>🔧🗜️🪛 <a href="flashcards/testing.html">tool recognition flashcards</a></p>
-		<p>🪵🪚 <a href="readytowork/readytowork.html">los angeles union carpenters ready to work list</a></p>
+		<p>🏋🏼&emsp;<a href="exercise%20friend/friend.html">exercise friend</a></p>
 	</div>
 	
 	<div>
-		<p>🧵 <a href="sample twine game.html">sample twine game</a></p>
-		<p>🐕 <a href="mickeygame/mickeyz.html">mickey game</a></p>
+		<p>🎨🖼️&emsp;<a href="gallery_frandelaide/gallery.html">gallery frandelaide</a></p>
 	</div>
 	
 	<div>
-		<p>🎶 <a href="jmix/index.html">jmix</a></p>
-		<p>🎵 <a href="españolmix/index.html">españolmix</a></p>
+		<p>🧵&emsp;<a href="sample twine game.html">sample twine game</a></p>
+		<p>🐕&emsp;<a href="mickeygame/mickeyz.html">mickey game</a></p>
 	</div>
 	
-	<div><p>⬅️⬆️ <a href="ddr/ddr.html">ddr selection screen</a></p></div>
+	<div>
+		<p>🎶&emsp;<a href="jmix/index.html">jmix</a></p>
+		<p>🎵&emsp;<a href="españolmix/index.html">españolmix</a></p>
+	</div>
 	
-	<div><p>💪 <a href="exercise friend/friend.html">exercise friend</a></p></div>
+	<div><p>⬅️⬆️&emsp;<a href="ddr/ddr.html">ddr selection screen</a></p></div>
+	
+	<div>
+		<p>🔧🗜️🪛&emsp;<a href="flashcards/testing.html">tool recognition flashcards</a></p>
+		<p>🪵🪚&emsp;<a href="readytowork/readytowork.html">los angeles union carpenters ready to work list</a></p>
+	</div>
 	
 </body>
 </html>
