added comments exercise friend

--- a/exercise friend/friend.html
+++ b/exercise friend/friend.html
@@ -108,14 +108,12 @@
 		50% {
 			transform: translatey(-4px);
 		}
-
 	}
 	
 	@media only screen and (max-width: 800px) {
 		.container {
 			width: 90%;
 		}
-
 	}
 	
 	</style>
@@ -144,11 +142,12 @@
 
 <script>
 	
+	//array of colors for the headers to cycle thru
 	const lightcolors = ['#d3c8c3','#d3b690','#b9af2a','#b0b4b4','#d4be96','#dcb38b'];
 	let currentIndex = 0;
 	var ssml = '';
 	
-	// fetch the data from the spreadsheet
+	// fetch the data from the spreadsheet as json using opensheet
 	fetch('https://opensheet.elk.sh/1osuWeLX42mewfnpqIbYoUMNgtGscNcouADfZRGOLQxc/exercises')
 	    .then(response => {
 	        if (!response.ok) {
@@ -166,7 +165,7 @@
 	        console.error('data fetching error', error);
 	    });
 
-	//make the exercise elements
+	//make the exercise groups and the exercises within them
 	function createElements(data) {
 	
 		const stretchList = document.getElementById('stretchList');
@@ -176,7 +175,7 @@
 			
 			const groupName = item.group;
 
-			//if the group header doesn't exist yet, make it
+			//if the exercise group header doesn't exist yet, make it
 			if (groupCheckboxes[groupName] === undefined) {
 				
 				const accordion = document.createElement('div');
@@ -189,7 +188,7 @@
 				triangle.className = 'triangle';
 				triangle.textContent = "▶";
 				
-				//when the triangle in the group header is clicked, show or hide the content
+				//when the triangle in the exercise group header is clicked, show or hide the content
 				triangle.onclick = function() {
 					toggleAccordion(header);
 				};
@@ -234,7 +233,7 @@
 			
 			}
 
-			//make a checkbox for exercises
+			//make a checkbox for sub-exercises
 			const stretchCheckbox = document.createElement('input');
 			stretchCheckbox.type = 'checkbox';
 			stretchCheckbox.checked = false;
@@ -274,6 +273,7 @@
 		
 		});
 		
+		//total time estimation for exercise group headers
 		for (let groupName in groupCheckboxes) {
             const checkboxes = groupCheckboxes[groupName].content.querySelectorAll("input[type='checkbox']");
             const filteredTextList = Array.from(checkboxes)
@@ -293,6 +293,7 @@
 		}
 	}
 	
+	//open and close the exercise group accordions
 	function toggleAccordion(header) {
 	  const content = header.nextElementSibling;
 	  if (content.style.display === "block") {
@@ -362,6 +363,7 @@
 	    xhr.send(data);
 	}
 	
+	//make ssml for the robot to speak
 	function generatessml(filteredTextList){
 		
 		ssml = '<speak>';
@@ -436,6 +438,7 @@
 		ssml += '</speak>';
 	}
 	
+	//estimate time it takes to read any given ssml
 	function estimateReadingTime(ssml) {
 		
 	    const wordsPerSecond = 2.5;
