--- a/pt/pt.html
+++ b/pt/pt.html
@@ -1,14 +1,92 @@
 <html>
 <head>
 	<style>
-		body{
+		
+		body {
 			font-family: "Noto Serif";
+		  margin: 0;
+		  display: flex;
+		  justify-content: center;
+		  align-items: center;
+		  height: 100vh;
+		  background: #f0f0f0;
+		  font-family: sans-serif;
 		}
+
+		.card-container {
+		  display: flex;
+		  align-items: center;
+		  position: relative;
+		}
+
+		.nav-btn {
+		  font-size: 2rem;
+		  padding: 0.5rem 1rem;
+		  cursor: pointer;
+		  background: none;
+		  border: none;
+		}
+
+		.card {
+		  width: 300px;
+		  height: 300px;
+		  background: white;
+		  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+		  display: flex;
+		  justify-content: center;
+		  align-items: center;
+		  margin: 0 1rem;
+		  overflow: hidden;
+		  border-radius: 1rem;
+		}
+
+		.card img {
+		  width: 100%;
+		  height: auto;
+		  object-fit: contain;
+		}
+		
 	</style>
 </head>
 <body>
 	
-	hello
+	<div class="card-container">
+	    <button id="prevBtn" class="nav-btn">←</button>
+	    <div class="card" id="exerciseCard">
+	      <img id="exerciseImage" src="" alt="Exercise" />
+	    </div>
+	    <button id="nextBtn" class="nav-btn">→</button>
+	  </div>
+
+	  <script>
+	  	
+		  const images = [
+		    'images/piriformis.gif',
+		    'images/supinebridge.gif',
+		    'images/clamshell.webp'
+		  ];
+
+		  let currentIndex = 0;
+		  const exerciseImage = document.getElementById('exerciseImage');
+
+		  function showImage(index) {
+		    exerciseImage.src = images[index];
+		  }
+
+		  document.getElementById('prevBtn').addEventListener('click', () => {
+		    currentIndex = (currentIndex - 1 + images.length) % images.length;
+		    showImage(currentIndex);
+		  });
+
+		  document.getElementById('nextBtn').addEventListener('click', () => {
+		    currentIndex = (currentIndex + 1) % images.length;
+		    showImage(currentIndex);
+		  });
+
+		  // Initialize with first image
+		  showImage(currentIndex);
+		
+	  </script>
 	
 </body>
 </html>
